[tool.poetry]
name = "python-generators-experiment"
version = "0.1.0"
description = ""
authors = ["Prabhudesai, Tanay (ELS-CON) <t.prabhudesai@elsevier.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
